<resources>
    <string name="app_name">MovieCatalog</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_movie">Movie</string>
    <string name="title_tv">TV Show</string>
    <string name="content_description">Content Description</string>
    <string name="overview">Overview</string>
    <string name="test_string">Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orm half-human, half-Atlantean brother and true heir to the throne.</string>
    <string name="tv_ex_title">Avengers</string>
    <string name="tv_ex_year">2018</string>
    <string name="tv_ex_rating">7.3</string>
    <string name="tv_ex_language">EN</string>
    <string name="favorite">Favorite</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_favorite">Favorite</string>
</resources>
